--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -48,6 +49,7 @@ dependencies {
 
     //UI
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'kr.co.prnd:readmore-textview:1.0.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
